fix alert box has no spacing

--- a/plugins/Dashboard/stylesheets/widget.less
+++ b/plugins/Dashboard/stylesheets/widget.less
@@ -4,7 +4,7 @@
     border-radius: 2px;
     position: relative;
     box-shadow: @default-box-shade;
-    border: 0 !important;
+    border: 1px solid @theme-color-widget-background !important;
 
     &:hover, &:focus {
         box-shadow: @default-box-shade;
